Modify sql from user to users

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,6 @@
 index.welcome = Welcome to
 
-menu.slogan = Fusing flavor and nutrition 
+menu.slogan = Fusing Flavor and Nutrition 
 menu.home = HOME
 menu.recipes = RECIPES
 menu.categories = CATEGORIES
