Add language for home page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,7 +1,20 @@
-index.welcome = Welcome to
 
+//Header
 menu.slogan = Fusing Flavor and Nutrition 
 menu.home = HOME
 menu.recipes = RECIPES
 menu.categories = CATEGORIES
 menu.profile = PROFILE
+menu.login = Log in
+
+//home
+home.section.welcome = Welcome to
+home.message.welcome=If you love cooking, this is the best place to find \
+  healthy and delicious recipes created by our nutritionists.
+home.category= CATEGORY
+home.category.text= Recipe
+home.aboutus= ABOUT US
+home.aboutus.title=NutriFusion Food
+home.aboutus.message=Our name came from our interest in the fusion between food and nutrition.\
+All the recipes are created by nutritionists to provide greater reliability and a better nutritional dining experience.\
+We want to create a site more minimalist with all the main information but that maintains an attractive style.\
