--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,7 +1,18 @@
-index.welcome = Bienvenido a
-
+//Header
 menu.slogan = Fusionando Sabor y Nutrición
 menu.home = INICIO
 menu.recipes = RECETAS
 menu.categories = CATEGORIAS
 menu.profile = PERFIL
+menu.login = Inicio sesión
+//home
+home.section.welcome = Bienvenido a
+home.message.welcome=Si eres amante de la cocina este es el mejor lugar para encontrar recetas\
+  \ saludables y deliciosas creadas por nuestros nutricionistas.
+home.category= CATEGORIAS
+home.category.text=Recetas
+home.aboutus= ACERCA DE NOSOTROS
+home.aboutus.title=NutriFusion Food
+home.aboutus.message=Nuestro nombre proviene de nuestro interés por la fusión entre la comida y la nutrición.\
+Los nutricionistas crean todas las recetas para aportar mayor fiabilidad y una mejor experiencia gastronómica nutricional.\
+Queremos crear una web más minimalista con toda la información principal pero que mantenga un estilo atractivo.
