Add language for fragments page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,3 @@
-
 //Header
 menu.slogan = Fusing Flavor and Nutrition 
 menu.home = HOME
@@ -6,6 +5,11 @@ menu.recipes = RECIPES
 menu.categories = CATEGORIES
 menu.profile = PROFILE
 menu.login = Log in
+menu.dropdown1=All
+menu.dropdown2=Main dish
+menu.dropdown3=Desserts
+menu.dropdown4=Drinks
+menu.dropdown5=Snacks
 
 //home
 home.section.welcome = Welcome to
