--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -5,6 +5,12 @@ menu.recipes = RECETAS
 menu.categories = CATEGORIAS
 menu.profile = PERFIL
 menu.login = Inicio sesión
+menu.dropdown1=Todos
+menu.dropdown2=Salados
+menu.dropdown3=Postres
+menu.dropdown4=Bebidas
+menu.dropdown5=Snacks
+
 //home
 home.section.welcome = Bienvenido a
 home.message.welcome=Si eres amante de la cocina este es el mejor lugar para encontrar recetas\
