Add language for recipelist page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -21,4 +21,10 @@ home.aboutus= ABOUT US
 home.aboutus.title=NutriFusion Food
 home.aboutus.message=Our name came from our interest in the fusion between food and nutrition.\
 All the recipes are created by nutritionists to provide greater reliability and a better nutritional dining experience.\
-We want to create a site more minimalist with all the main information but that maintains an attractive style.\
+We want to create a site more minimalist with all the main information but that maintains an attractive style.
+
+//RecipeList
+recipelist.name.nutritionist=Nutritionist:
+recipelist.time=Time:
+recipelist.description=Description:
+recipelist.idiom=Idiom:
