--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -22,3 +22,9 @@ home.aboutus.title=NutriFusion Food
 home.aboutus.message=Nuestro nombre proviene de nuestro interés por la fusión entre la comida y la nutrición.\
 Los nutricionistas crean todas las recetas para aportar mayor fiabilidad y una mejor experiencia gastronómica nutricional.\
 Queremos crear una web más minimalista con toda la información principal pero que mantenga un estilo atractivo.
+
+//RecipeList
+recipelist.name.nutritionist=Nutricionista:
+recipelist.time=Tiempo:
+recipelist.description=Descripción:
+recipelist.idiom=Idioma:
