Add language for profile page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -28,3 +28,15 @@ recipelist.name.nutritionist=Nutritionist:
 recipelist.time=Time:
 recipelist.description=Description:
 recipelist.idiom=Idiom:
+
+//RecipeDetail
+
+//Profile
+profile.section=MY PROFILE
+profile.user.name=Name:
+profile.user.email=Email:
+profile.user.birthdate=Birthdate:
+profile.user.favourite.recipe=FAVOURITE RECIPES
+profile.user.recipes=MY RECIPES
+profile.user.buttom.edit=EDIT
+profile.user.buttom.create= NEW RECIPE
