--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -28,3 +28,15 @@ recipelist.name.nutritionist=Nutricionista:
 recipelist.time=Tiempo:
 recipelist.description=Descripción:
 recipelist.idiom=Idioma:
+
+//RecipeDetail
+
+//Profile
+profile.section=MI PERFIL
+profile.user.name=Nombre:
+profile.user.email=Email:
+profile.user.birthdate=Fecha de nacimiento:
+profile.user.favourite.recipe= RECETAS FAVORITAS
+profile.user.recipes= MIS RECETAS
+profile.user.buttom.edit=EDITAR
+profile.user.buttom.create=NUEVA RECETA
