Add language for recipeDetail page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -30,6 +30,14 @@ recipelist.description=Description:
 recipelist.idiom=Idiom:
 
 //RecipeDetail
+recipeDetail.time=Time:
+recipeDetail.idiom=Idiom:
+recipeDetail.alergen=Allergen:
+recipeDetail.name.nutritionits=Nutritionist name
+recipeDetail.add.favourite=Add to Favorites
+recipeDetail.ingredients=Ingredients
+recipeDetail.tools=Tools
+recipeDetail.preparation=Preparation
 
 //Profile
 profile.section=MY PROFILE
