--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -30,6 +30,14 @@ recipelist.description=Descripción:
 recipelist.idiom=Idioma:
 
 //RecipeDetail
+recipeDetail.time=Tiempo:
+recipeDetail.idiom=Idioma:
+recipeDetail.alergen=Alergenos:
+recipeDetail.name.nutritionits=Nombre del nutricionista
+recipeDetail.add.favourite=Añadir a Favoritos
+recipeDetail.ingredients=Ingredientes
+recipeDetail.tools=Utensilios
+recipeDetail.preparation=Preparación
 
 //Profile
 profile.section=MI PERFIL
