Add language for recipeForm page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -48,3 +48,20 @@ profile.user.favourite.recipe=FAVOURITE RECIPES
 profile.user.recipes=MY RECIPES
 profile.user.buttom.edit=EDIT
 profile.user.buttom.create= NEW RECIPE
+
+//RecipeFormulary
+recipeForm.name.recipe= Recipe name
+recipeForm.time.recipe= Recipe duration
+recipeForm.category=Category:
+recipeForm.tools=Tools
+recipeForm.description=Recipe Description
+recipeForm.steps=Steps to follow
+recipeForm.idiom=Idiom
+recipeForm.buttom.add=ADD RECIPE
+
+recipeForm.placeholder.idiom=Select the idiom...
+
+recipeForm.message.name=Added name
+recipeForm.message.time=Added duration
+recipeForm.message.description=Introduce a description
+recipeForm.message.steps=Introduce steps
