--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -48,3 +48,20 @@ profile.user.favourite.recipe= RECETAS FAVORITAS
 profile.user.recipes= MIS RECETAS
 profile.user.buttom.edit=EDITAR
 profile.user.buttom.create=NUEVA RECETA
+
+//RecipeFormulary
+recipeForm.name.recipe= Nombre de la receta
+recipeForm.time.recipe=Duración de la receta
+recipeForm.category=Categoria:
+recipeForm.tools=Utensilios
+recipeForm.description=Descripción de la receta
+recipeForm.steps=Pasos a seguir
+recipeForm.idiom=Idioma
+
+recipeForm.placeholder.idiom=Selecciona el idioma...
+
+recipeForm.buttom.add=AÑADIR RECETA
+recipeForm.message.name=Nombre añadido
+recipeForm.message.time=Duración añadida
+recipeForm.message.description= Introduce una descripción
+recipeForm.message.steps=Añade los pasos
