modify ingredients formulary

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,11 +27,11 @@ We want to create a site more minimalist with all the main information but that 
 recipelist.name.nutritionist=Nutritionist:
 recipelist.time=Time:
 recipelist.description=Description:
-recipelist.idiom=Idiom:
+recipelist.language=language:
 
 //RecipeDetail
 recipeDetail.time=Time:
-recipeDetail.idiom=Idiom:
+recipeDetail.language=language:
 recipeDetail.alergen=Allergen:
 recipeDetail.name.nutritionits=Nutritionist name
 recipeDetail.add.favourite=Add to Favorites
@@ -53,13 +53,14 @@ profile.user.buttom.create= NEW RECIPE
 recipeForm.name.recipe= Recipe name
 recipeForm.time.recipe= Recipe duration
 recipeForm.category=Category:
+recipeForm.ingredients=Ingredients:
 recipeForm.tools=Tools
 recipeForm.description=Recipe Description
 recipeForm.steps=Steps to follow
-recipeForm.idiom=Idiom
+recipeForm.language=language
 recipeForm.buttom.add=ADD RECIPE
 
-recipeForm.placeholder.idiom=Select the idiom...
+recipeForm.placeholder.language=Select the language...
 
 recipeForm.message.name=Added name
 recipeForm.message.time=Added duration
