--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -27,11 +27,11 @@ Queremos crear una web más minimalista con toda la información principal pero 
 recipelist.name.nutritionist=Nutricionista:
 recipelist.time=Tiempo:
 recipelist.description=Descripción:
-recipelist.idiom=Idioma:
+recipelist.language=Idioma:
 
 //RecipeDetail
 recipeDetail.time=Tiempo:
-recipeDetail.idiom=Idioma:
+recipeDetail.language=Idioma:
 recipeDetail.alergen=Alergenos:
 recipeDetail.name.nutritionits=Nombre del nutricionista
 recipeDetail.add.favourite=Añadir a Favoritos
@@ -53,12 +53,13 @@ profile.user.buttom.create=NUEVA RECETA
 recipeForm.name.recipe= Nombre de la receta
 recipeForm.time.recipe=Duración de la receta
 recipeForm.category=Categoria:
+recipeForm.ingredients=Ingredientes:
 recipeForm.tools=Utensilios
 recipeForm.description=Descripción de la receta
 recipeForm.steps=Pasos a seguir
-recipeForm.idiom=Idioma
+recipeForm.language=Idioma
 
-recipeForm.placeholder.idiom=Selecciona el idioma...
+recipeForm.placeholder.language=Selecciona el idioma...
 
 recipeForm.buttom.add=AÑADIR RECETA
 recipeForm.message.name=Nombre añadido
