Change language and size to title recipeList page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,6 +24,7 @@ All the recipes are created by nutritionists to provide greater reliability and 
 We want to create a site more minimalist with all the main information but that maintains an attractive style.
 
 //RecipeList
+recipelist.all.recipes=All recipes
 recipelist.name.nutritionist=Nutritionist:
 recipelist.time=Time:
 recipelist.description=Description:
