--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -24,6 +24,7 @@ Los nutricionistas crean todas las recetas para aportar mayor fiabilidad y una m
 Queremos crear una web más minimalista con toda la información principal pero que mantenga un estilo atractivo.
 
 //RecipeList
+recipelist.all.recipes=Todas las recetas
 recipelist.name.nutritionist=Nutricionista:
 recipelist.time=Tiempo:
 recipelist.description=Descripción:
