fix text language

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -28,13 +28,13 @@ recipelist.all.recipes=All recipes
 recipelist.name.nutritionist=Nutritionist:
 recipelist.time=Time:
 recipelist.description=Description:
-recipelist.language=language:
+recipelist.language=Language:
 
 //RecipeDetail
 recipeDetail.time=Time:
-recipeDetail.language=language:
+recipeDetail.language=Language:
 recipeDetail.alergen=Allergen:
-recipeDetail.name.nutritionits=Nutritionist name
+recipeDetail.name.nutritionits=Nutritionist:
 recipeDetail.add.favourite=Add to Favorites
 recipeDetail.ingredients=Ingredients
 recipeDetail.tools=Tools
@@ -51,14 +51,14 @@ profile.user.buttom.edit=EDIT
 profile.user.buttom.create= NEW RECIPE
 
 //RecipeFormulary
-recipeForm.name.recipe= Recipe name
-recipeForm.time.recipe= Recipe duration
+recipeForm.name.recipe= Recipe name:
+recipeForm.time.recipe=Duration:
 recipeForm.category=Category:
 recipeForm.ingredients=Ingredients:
-recipeForm.tools=Tools
-recipeForm.description=Recipe Description
-recipeForm.steps=Steps to follow
-recipeForm.language=language
+recipeForm.tools=Tools:
+recipeForm.description=Recipe Description:
+recipeForm.steps=Steps to follow:
+recipeForm.language=language:
 recipeForm.buttom.add=ADD RECIPE
 
 recipeForm.placeholder.language=Select the language...
