--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -34,7 +34,7 @@ recipelist.language=Idioma:
 recipeDetail.time=Tiempo:
 recipeDetail.language=Idioma:
 recipeDetail.alergen=Alergenos:
-recipeDetail.name.nutritionits=Nombre del nutricionista
+recipeDetail.name.nutritionits=Nutricionista:
 recipeDetail.add.favourite=Añadir a Favoritos
 recipeDetail.ingredients=Ingredientes
 recipeDetail.tools=Utensilios
@@ -51,14 +51,14 @@ profile.user.buttom.edit=EDITAR
 profile.user.buttom.create=NUEVA RECETA
 
 //RecipeFormulary
-recipeForm.name.recipe= Nombre de la receta
-recipeForm.time.recipe=Duración de la receta
+recipeForm.name.recipe= Nombre de la receta:
+recipeForm.time.recipe=Duración:
 recipeForm.category=Categoria:
 recipeForm.ingredients=Ingredientes:
-recipeForm.tools=Utensilios
-recipeForm.description=Descripción de la receta
-recipeForm.steps=Pasos a seguir
-recipeForm.language=Idioma
+recipeForm.tools=Utensilios:
+recipeForm.description=Descripción de la receta:
+recipeForm.steps=Pasos a seguir:
+recipeForm.language=Idioma:
 
 recipeForm.placeholder.language=Selecciona el idioma...
 
