fix text language recipeForm

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -58,12 +58,15 @@ recipeForm.ingredients=Ingredients:
 recipeForm.tools=Tools:
 recipeForm.description=Recipe Description:
 recipeForm.steps=Steps to follow:
-recipeForm.language=language:
+recipeForm.language=Language:
 recipeForm.buttom.add=ADD RECIPE
 
+recipeForm.placeholder.category=Select the category...
+recipeForm.placeholder.tools= Select the tools...
 recipeForm.placeholder.language=Select the language...
 
 recipeForm.message.name=Added name
 recipeForm.message.time=Added duration
 recipeForm.message.description=Introduce a description
 recipeForm.message.steps=Introduce steps
+
