--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -60,6 +60,8 @@ recipeForm.description=Descripción de la receta:
 recipeForm.steps=Pasos a seguir:
 recipeForm.language=Idioma:
 
+recipeForm.placeholder.category=Selecciona una categoría...
+recipeForm.placeholder.tools= Selecciona los utensilios...
 recipeForm.placeholder.language=Selecciona el idioma...
 
 recipeForm.buttom.add=AÑADIR RECETA
