modify placeholder in recipeform

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -67,6 +67,7 @@ recipeForm.placeholder.language=Select the language...
 
 recipeForm.message.name=Added name
 recipeForm.message.time=Added duration
+recipeForm.message.category=Added Category
 recipeForm.message.description=Introduce a description
 recipeForm.message.steps=Introduce steps
 
