--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -67,5 +67,6 @@ recipeForm.placeholder.language=Selecciona el idioma...
 recipeForm.buttom.add=AÑADIR RECETA
 recipeForm.message.name=Nombre añadido
 recipeForm.message.time=Duración añadida
+recipeForm.message.category=Categoría añadida
 recipeForm.message.description= Introduce una descripción
 recipeForm.message.steps=Añade los pasos
