Comment functionality not implemented or possible ampliation parts

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -39,6 +39,7 @@ recipeDetail.add.favourite=Add to Favorites
 recipeDetail.ingredients=Ingredients
 recipeDetail.tools=Tools
 recipeDetail.preparation=Preparation
+recipeDetail.delete=DELETE RECIPE
 
 //Profile
 profile.section=MY PROFILE
