--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -39,6 +39,7 @@ recipeDetail.add.favourite=Añadir a Favoritos
 recipeDetail.ingredients=Ingredientes
 recipeDetail.tools=Utensilios
 recipeDetail.preparation=Preparación
+recipeDetail.delete=BORRAR RECETA
 
 //Profile
 profile.section=MI PERFIL
