add language log in

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -72,3 +72,16 @@ recipeForm.message.category=Added Category
 recipeForm.message.description=Introduce a description
 recipeForm.message.steps=Introduce steps
 
+//userForm
+userForm.name=Name
+userForm.username=User name
+userForm.surname1= First surname
+userForm.surname2= Second surname
+userForm.email= Email
+userForm.password=Password
+userForm.birthdate=Birthdate
+userForm.nutritionist=Are you a nutritionist?
+
+userForm.message.addEmail=Add Email
+userForm.message.addpassword=Add Password
+userForm.button.signup = SIGN UP
