--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -71,3 +71,17 @@ recipeForm.message.time=Duración añadida
 recipeForm.message.category=Categoría añadida
 recipeForm.message.description= Introduce una descripción
 recipeForm.message.steps=Añade los pasos
+
+//userForm
+userForm.name=Nombre
+userForm.username=Nombre del usuario
+userForm.surname1= Primer Apellido
+userForm.surname2= Segundo Apellido
+userForm.email=Correo electronico
+userForm.password=Contraseña
+userForm.birthdate= Fecha de nacimiento
+userForm.nutritionist=¿Eres un nutricionista?
+
+userForm.message.addEmail=Añade un correo electronico
+userForm.message.addpassword=Añade una contraseña
+userForm.button.signup = INICIA SESIÓN
