--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -85,3 +85,5 @@ userForm.nutritionist=¿Eres un nutricionista?
 userForm.message.addEmail=Añade un correo electronico
 userForm.message.addpassword=Añade una contraseña
 userForm.button.signup = INICIA SESIÓN
+updateForm.buttom.update= ACTUALIZAR RECETA
+updateForm.buttom.cancel= CANCELAR
