Add html page for nutritionist List

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -86,3 +86,8 @@ userForm.message.addpassword=Add Password
 userForm.button.signup = SIGN UP
 updateForm.buttom.update= UPDATE RECIPE
 updateForm.buttom.cancel= CANCEL
+
+//nutritionistList
+nutritionistlist.all.nutritionist= All nutritionists
+nutritionistlist.name= Name: 
+nutritionistlist.email= Email: 
