--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -86,3 +86,8 @@ userForm.message.addpassword=Añade una contraseña
 userForm.button.signup = INICIA SESIÓN
 updateForm.buttom.update= ACTUALIZAR RECETA
 updateForm.buttom.cancel= CANCELAR
+
+//nutritionistList
+nutritionistlist.all.nutritionist= Todos los nutricionistas
+nutritionistlist.name= Nombre: 
+nutritionistlist.email= Correo: 
