--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -91,3 +91,4 @@ updateForm.buttom.cancel= CANCELAR
 nutritionistlist.all.nutritionist= Todos los nutricionistas
 nutritionistlist.name= Nombre: 
 nutritionistlist.email= Correo: 
+recipeDetail.step= Paso 
