Add filters page and form

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -92,3 +92,8 @@ nutritionistlist.all.nutritionist= All nutritionists
 nutritionistlist.name= Name: 
 nutritionistlist.email= Email: 
 recipeDetail.step= Step 
+
+//filters
+filters.allergens= Allergens
+filters.placeholder.allergen= Select a filter
+filters.search= SEARCH
