--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -92,3 +92,8 @@ nutritionistlist.all.nutritionist= Todos los nutricionistas
 nutritionistlist.name= Nombre: 
 nutritionistlist.email= Correo: 
 recipeDetail.step= Paso 
+
+//filters
+filters.allergens= Alergenos
+filters.placeholder.allergen= Selecciona un filtro
+filters.search= BUSCAR
