Modify nav and refactor html pages

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,6 +3,7 @@ menu.slogan = Fusing Flavor and Nutrition
 menu.home = HOME
 menu.recipes = RECIPES
 menu.profile = PROFILE
+menu.filter = FILTERS
 menu.login = Log in
 menu.dropdown1=All
 menu.dropdown2=Main dish
