--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -3,6 +3,7 @@ menu.slogan = Fusionando Sabor y Nutrición
 menu.home = INICIO
 menu.recipes = RECETAS
 menu.profile = PERFIL
+menu.filter = FILTROS
 menu.login = Inicio sesión
 menu.dropdown1=Todos
 menu.dropdown2=Salados
